syntax = "proto3";
package dipstick.xcp.a2l.v1;

message Module {
  string name = 1;
  string long_identifier = 2;
  string a2ml_text = 3;

  // repeated AxisPts axis_pts = 4;
  // repeated Blob blob = 5;
  // repeated Characteristic characteristic = 6;
  // repeated CompuMethod compu_method = 7;
  // repeated CompuTab compu_tab = 8;
  // repeated CompuVtab compu_vtab = 9;
  // repeated CompuVtabRange compu_vtab_range = 10;
  // repeated Frame frame = 11;
  // repeated Function function = 12;
  // repeated Group group = 13;
  // repeated IfData if_data = 14;
  // repeated Instance instance = 15;
  repeated Measurement measurement = 16;

  // ModCommon mod_common = 17;
  // ModPar mod_par = 18;
  // repeated RecordLayout record_layout = 19;
  // repeated Transformer transformer = 20;
  // repeated TypedefAxis typedef_axis = 21;
  // repeated TypedefBlob typedef_blob = 22;
  // repeated TypedefCharacteristic typedef_characteristic = 23;
  // repeated TypedefMeasurement typedef_measurement = 24;
  // repeated TypedefStructure typedef_structure = 25;
  // repeated Unit unit = 26;
  // repeated UserRights user_rights = 27;
  // VariantCoding variant_coding = 28;
}

message Measurement {
  string name = 1;
  string long_identifier = 2;
  DataType datatype = 3;
  string conversion = 4;
  // u16
  uint32 resolution = 5;
  double accuracy = 6;
  double lower_limit = 7;
  double upper_limit = 8;
  AddressType address_type = 9;
  repeated Annotation annotation = 10;
  // u16
  uint32 array_size = 11;
  uint32 bit_mask = 12;

  // BitOperation bit_operation = 13;
  // ByteOrder byte_order = 14;
  // Discrete discrete = 15;
  // DisplayIdentifier display_identifier = 16;

  uint32 ecu_address = 17;
  // u16
  uint32 ecu_address_extension = 18;

  // ErrorMask error_mask = 19;
  // Format format = 20;
  // FunctionList function_list = 21;
  // repeated IfData if_data = 22;
  // Layout layout = 23;

  // u16
  repeated uint32 matrix_dim = 24;

  // MaxRefresh max_refresh = 25;
  // ModelLink model_link = 26;
  // PhysUnit phys_unit = 27;
  // ReadWrite read_write = 28;
  // RefMemorySegment ref_memory_segment = 29;
  // SymbolLink symbol_link = 30;
  // Virtual var_virtual = 31;
}

enum DataType {
  DATA_TYPE_UNSPECIFIED = 0;
  DATA_TYPE_UBYTE = 1;
  DATA_TYPE_SBYTE = 2;
  DATA_TYPE_UWORD = 3;
  DATA_TYPE_SWORD = 4;
  DATA_TYPE_ULONG = 5;
  DATA_TYPE_SLONG = 6;
  DATA_TYPE_A_UINT64 = 7;
  DATA_TYPE_A_INT64 = 8;
  DATA_TYPE_FLOAT16_IEEE = 9;
  DATA_TYPE_FLOAT32_IEEE = 10;
  DATA_TYPE_FLOAT64_IEEE = 11;
}

enum AddressType {
  ADDRESS_TYPE_UNSPECIFIED = 0;
  ADDRESS_TYPE_PBYTE = 1;
  ADDRESS_TYPE_PWORD = 2;
  ADDRESS_TYPE_PLONG = 3;
  ADDRESS_TYPE_PLONG_LONG = 4;
  ADDRESS_TYPE_DIRECT = 5;
}

message Annotation {
  string label = 1;
  string origin = 2;
  repeated string text = 3;
}
